first chapter page reset

--- a/test/book.html
+++ b/test/book.html
@@ -134,7 +134,7 @@ Paged.registerHandlers(handlers);
 <nav data-type="toc">
 <h1>Table of Contents</h1>
 </nav>
-<section data-type="chapter">
+<section data-type="chapter" class="pagereset" >
 <h1>Preliminaries</h1>
 <p>This chapter introduces mathematical logic as a tool for rigorously proving statements. An elementary introduction to set theory and functions is also included.</p>
 <section data-type="sect1">
