--- a/test/book.html
+++ b/test/book.html
@@ -74,7 +74,7 @@ class handlers extends Paged.Handler {
             console.warn('no nav found');
         } else {
             let tocElementNbr = 0;
-            const selectors = ['section[data-type="chapter"]>h1', 'section[data-type="sect1"]>h1'];
+            const selectors = ['section[data-type="chapter"]>h1', 'section[data-type="chapter"] section[data-type="sect1"]>h1'];
             for (let i = 0; i < selectors.length; i++) {
                 for (let el of content.querySelectorAll(selectors[i])) {
                     el.classList.add('toc-element');
@@ -130,6 +130,196 @@ Paged.registerHandlers(handlers);
 <p data-type="author">Ben Lauwens, Dr. ir<br>Lieutenant-Colonel IMM<br>Military Professor</p>
 <p data-type="year">2024</p>
 <p data-type="course">ES111</p>
+</section>
+<section data-type="preface" class="pagereset" >
+<h1>Preface</h1>
+<section data-type="sect1">
+<h1>Who are we?</h1>
+<ul>
+<li>
+<p>Lecturer: LCL IMM Ben LAUWENS, Dr Ir / D30.19 / <a href="mailto:ben.lauwens@mil.be">ben.lauwens.be</a></p>
+</li>
+<li>
+<p>Assistant: Mr Indy VAN DEN BROECK, MSc</p>
+</li>
+</ul>
+</section>
+<section data-type="sect1">
+<h1>Course</h1>
+<ul>
+<li>
+<p>Theory: 22 Hr → 66 Hr</p>
+</li>
+<li>
+<p>Exercises: 20 Hr 	→ 40 Hr</p>
+</li>
+</ul>
+</section>
+<section data-type="sect1">
+<h1>Documentation</h1>
+<ul>
+<li>
+<p>Handbook: Calculus, a complete course - 10th edition<br/>Chapter P-9: theory and exercises</p>
+</li>
+<li>
+<p>Handouts: supplements, summaries and other proofs</p>
+</li>
+</ul>
+</section>
+<section data-type="sect1">
+<h1>Schedule</h1>
+<table>
+<thead>
+<tr>
+<td style="text-align:center">Lectures</td>
+<td style="text-align:center">Theory</td>
+<td style="text-align:center">Exercises</td>
+<td style="text-align:left">Topic</td>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">08/10</td>
+<td style="text-align:center">1-2</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Introduction and Mathematical Logic</td>
+</tr>
+<tr>
+<td style="text-align:center">15/10</td>
+<td style="text-align:center">3-4</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Proofing Techniques and Real Numbers</td>
+</tr>
+<tr>
+<td style="text-align:center">17/10</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">1-2</td>
+<td style="text-align:left">Real Numbers and Functions</td>
+</tr>
+<tr>
+<td style="text-align:center">22/10</td>
+<td style="text-align:center">5-6</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Functions and Limits</td>
+</tr>
+<tr>
+<td style="text-align:center">24/10</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">3-4</td>
+<td style="text-align:left">Limits</td>
+</tr>
+<tr>
+<td style="text-align:center">29/10</td>
+<td style="text-align:center">7-8</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Continuity</td>
+</tr>
+<tr>
+<td style="text-align:center">31/10</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">5-6</td>
+<td style="text-align:left">Continuity</td>
+</tr>
+<tr>
+<td style="text-align:center">05/11</td>
+<td style="text-align:center">9-10</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Derivatives and Differentials</td>
+</tr>
+<tr>
+<td style="text-align:center">07/11</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">7-8</td>
+<td style="text-align:left">Derivatives and Differentials</td>
+</tr>
+<tr>
+<td style="text-align:center">12/11</td>
+<td style="text-align:center">11-12</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Applications of Differentiation</td>
+</tr>
+<tr>
+<td style="text-align:center">14/11</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">9-10</td>
+<td style="text-align:left">Applications of Differentiation</td>
+</tr>
+<tr>
+<td style="text-align:center">19/11</td>
+<td style="text-align:center">13-14</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Trancendental Functions</td>
+</tr>
+<tr>
+<td style="text-align:center">21/11</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">11-12</td>
+<td style="text-align:left">Trancendental Functions</td>
+</tr>
+<tr>
+<td style="text-align:center">26/11</td>
+<td style="text-align:center">15-16</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Integrals</td>
+</tr>
+<tr>
+<td style="text-align:center">28/11</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">13-14</td>
+<td style="text-align:left">Integrals</td>
+</tr>
+<tr>
+<td style="text-align:center">03/12</td>
+<td style="text-align:center">17-18</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Integration Techniques</td>
+</tr>
+<tr>
+<td style="text-align:center">05/12</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">15-16</td>
+<td style="text-align:left">Integration Techniques</td>
+</tr>
+<tr>
+<td style="text-align:center">10/12</td>
+<td style="text-align:center">19-20</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+</tr>
+<tr>
+<td style="text-align:center">12/12</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">17-18</td>
+<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+</tr>
+<tr>
+<td style="text-align:center">17/12</td>
+<td style="text-align:center">21-22</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Sequences, Series and Power Series</td>
+</tr>
+<tr>
+<td style="text-align:center">19/12</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">19-20</td>
+<td style="text-align:left">Sequences, Series and Power Series</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section data-type="sect1">
+<h1>Evaluations</h1>
+<p>Test: 21/11 - 2 Hr: Exercises</p>
+<p>Exam:</p>
+<ul>
+<li>
+<p>Theory: oral exam - 5 min access to notes, 1 Hr preparation without notes and 30 min presentation</p>
+</li>
+<li>
+<p>Exercises: written exam - 4 Hr without notes</p>
+</li>
+</ul>
+</section>
 </section>
 <nav data-type="toc">
 <h1>Table of Contents</h1>
