--- a/test/preface.html
+++ b/test/preface.html
@@ -69,7 +69,7 @@ MathJax = {
 <p>Theory: 22 Hr → 66 Hr</p>
 </li>
 <li>
-<p>Exercises: 20 Hr 	→ 40 Hr</p>
+<p>Exercises: 22 Hr 	→ 44 Hr</p>
 </li>
 </ul>
 </section>
@@ -103,10 +103,16 @@ MathJax = {
 <td style="text-align:left">Introduction and Preliminaries</td>
 </tr>
 <tr>
-<td style="text-align:center">15/10</td>
+<td style="text-align:center">10/10</td>
 <td style="text-align:center">3-4</td>
 <td style="text-align:center"></td>
 <td style="text-align:left">Real Numbers and Functions</td>
+</tr>
+<tr>
+<td style="text-align:center">15/10</td>
+<td style="text-align:center">5-6</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Limits</td>
 </tr>
 <tr>
 <td style="text-align:center">17/10</td>
@@ -116,9 +122,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">22/10</td>
-<td style="text-align:center">5-6</td>
+<td style="text-align:center">7-8</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Limits</td>
+<td style="text-align:left">Continuity</td>
 </tr>
 <tr>
 <td style="text-align:center">24/10</td>
@@ -128,9 +134,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">29/10</td>
-<td style="text-align:center">7-8</td>
+<td style="text-align:center">9-10</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Continuity</td>
+<td style="text-align:left">Derivatives and Differentials</td>
 </tr>
 <tr>
 <td style="text-align:center">31/10</td>
@@ -140,9 +146,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">05/11</td>
-<td style="text-align:center">9-10</td>
+<td style="text-align:center">11-12</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Derivatives and Differentials</td>
+<td style="text-align:left">Applications of Differentiation</td>
 </tr>
 <tr>
 <td style="text-align:center">07/11</td>
@@ -152,9 +158,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">12/11</td>
-<td style="text-align:center">11-12</td>
+<td style="text-align:center">13-14</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Applications of Differentiation</td>
+<td style="text-align:left">Trancendental Functions</td>
 </tr>
 <tr>
 <td style="text-align:center">14/11</td>
@@ -164,9 +170,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">19/11</td>
-<td style="text-align:center">13-14</td>
+<td style="text-align:center">15-16</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Trancendental Functions</td>
+<td style="text-align:left">Integrals</td>
 </tr>
 <tr>
 <td style="text-align:center">21/11</td>
@@ -176,9 +182,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">26/11</td>
-<td style="text-align:center">15-16</td>
+<td style="text-align:center">17-18</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Integrals</td>
+<td style="text-align:left">Integration Techniques</td>
 </tr>
 <tr>
 <td style="text-align:center">28/11</td>
@@ -188,9 +194,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">03/12</td>
-<td style="text-align:center">17-18</td>
+<td style="text-align:center">19-20</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Integration Techniques</td>
+<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
 </tr>
 <tr>
 <td style="text-align:center">05/12</td>
@@ -200,9 +206,9 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">10/12</td>
-<td style="text-align:center">19-20</td>
+<td style="text-align:center">21-22</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+<td style="text-align:left">Sequences, Series and Power Series</td>
 </tr>
 <tr>
 <td style="text-align:center">12/12</td>
@@ -212,15 +218,15 @@ MathJax = {
 </tr>
 <tr>
 <td style="text-align:center">17/12</td>
-<td style="text-align:center">21-22</td>
 <td style="text-align:center"></td>
+<td style="text-align:center">19-20</td>
 <td style="text-align:left">Sequences, Series and Power Series</td>
 </tr>
 <tr>
 <td style="text-align:center">19/12</td>
 <td style="text-align:center"></td>
-<td style="text-align:center">19-20</td>
-<td style="text-align:left">Sequences, Series and Power Series</td>
+<td style="text-align:center">21-22</td>
+<td style="text-align:left">Revision</td>
 </tr>
 </tbody>
 </table>
