--- a/test/book.html
+++ b/test/book.html
@@ -151,7 +151,7 @@ Paged.registerHandlers(handlers);
 <p>Theory: 22 Hr → 66 Hr</p>
 </li>
 <li>
-<p>Exercises: 20 Hr 	→ 40 Hr</p>
+<p>Exercises: 22 Hr 	→ 44 Hr</p>
 </li>
 </ul>
 </section>
@@ -182,13 +182,19 @@ Paged.registerHandlers(handlers);
 <td style="text-align:center">08/10</td>
 <td style="text-align:center">1-2</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Introduction and Mathematical Logic</td>
+<td style="text-align:left">Introduction and Preliminaries</td>
+</tr>
+<tr>
+<td style="text-align:center">10/10</td>
+<td style="text-align:center">3-4</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Real Numbers and Functions</td>
 </tr>
 <tr>
 <td style="text-align:center">15/10</td>
-<td style="text-align:center">3-4</td>
+<td style="text-align:center">5-6</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Proofing Techniques and Real Numbers</td>
+<td style="text-align:left">Limits</td>
 </tr>
 <tr>
 <td style="text-align:center">17/10</td>
@@ -198,9 +204,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">22/10</td>
-<td style="text-align:center">5-6</td>
+<td style="text-align:center">7-8</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Functions and Limits</td>
+<td style="text-align:left">Continuity</td>
 </tr>
 <tr>
 <td style="text-align:center">24/10</td>
@@ -210,9 +216,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">29/10</td>
-<td style="text-align:center">7-8</td>
+<td style="text-align:center">9-10</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Continuity</td>
+<td style="text-align:left">Derivatives and Differentials</td>
 </tr>
 <tr>
 <td style="text-align:center">31/10</td>
@@ -222,9 +228,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">05/11</td>
-<td style="text-align:center">9-10</td>
+<td style="text-align:center">11-12</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Derivatives and Differentials</td>
+<td style="text-align:left">Applications of Differentiation</td>
 </tr>
 <tr>
 <td style="text-align:center">07/11</td>
@@ -234,9 +240,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">12/11</td>
-<td style="text-align:center">11-12</td>
+<td style="text-align:center">13-14</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Applications of Differentiation</td>
+<td style="text-align:left">Trancendental Functions</td>
 </tr>
 <tr>
 <td style="text-align:center">14/11</td>
@@ -246,9 +252,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">19/11</td>
-<td style="text-align:center">13-14</td>
+<td style="text-align:center">15-16</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Trancendental Functions</td>
+<td style="text-align:left">Integrals</td>
 </tr>
 <tr>
 <td style="text-align:center">21/11</td>
@@ -258,9 +264,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">26/11</td>
-<td style="text-align:center">15-16</td>
+<td style="text-align:center">17-18</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Integrals</td>
+<td style="text-align:left">Integration Techniques</td>
 </tr>
 <tr>
 <td style="text-align:center">28/11</td>
@@ -270,9 +276,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">03/12</td>
-<td style="text-align:center">17-18</td>
+<td style="text-align:center">19-20</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Integration Techniques</td>
+<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
 </tr>
 <tr>
 <td style="text-align:center">05/12</td>
@@ -282,9 +288,9 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">10/12</td>
-<td style="text-align:center">19-20</td>
+<td style="text-align:center">21-22</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+<td style="text-align:left">Sequences, Series and Power Series</td>
 </tr>
 <tr>
 <td style="text-align:center">12/12</td>
@@ -294,15 +300,15 @@ Paged.registerHandlers(handlers);
 </tr>
 <tr>
 <td style="text-align:center">17/12</td>
-<td style="text-align:center">21-22</td>
 <td style="text-align:center"></td>
+<td style="text-align:center">19-20</td>
 <td style="text-align:left">Sequences, Series and Power Series</td>
 </tr>
 <tr>
 <td style="text-align:center">19/12</td>
 <td style="text-align:center"></td>
-<td style="text-align:center">19-20</td>
-<td style="text-align:left">Sequences, Series and Power Series</td>
+<td style="text-align:center">21-22</td>
+<td style="text-align:left">Revision</td>
 </tr>
 </tbody>
 </table>
@@ -728,7 +734,7 @@ Paged.registerHandlers(handlers);
 <p>Observe that:</p>
 <ul>
 <li>
-<p>The conditional <span class="math-tex" data-type="tex">\(𝒫\implies 𝒬\)</span> is false only when the first part <span class="math-tex" data-type="tex">\(𝒫\)</span> is true and the second part <span class="math-tex" data-type="tex">\(𝒬\)</span> is false. Accordingly, when <span class="math-tex" data-type="tex">\(𝒫\)</span> is false, the conditonal <span class="math-tex" data-type="tex">\(𝒫\implies 𝒬\)</span> is false regardless of the truth value of <span class="math-tex" data-type="tex">\(𝒬\)</span>.</p>
+<p>The conditional <span class="math-tex" data-type="tex">\(𝒫\implies 𝒬\)</span> is false only when the first part <span class="math-tex" data-type="tex">\(𝒫\)</span> is true and the second part <span class="math-tex" data-type="tex">\(𝒬\)</span> is false. Accordingly, when <span class="math-tex" data-type="tex">\(𝒫\)</span> is false, the conditonal <span class="math-tex" data-type="tex">\(𝒫\implies 𝒬\)</span> is true regardless of the truth value of <span class="math-tex" data-type="tex">\(𝒬\)</span>.</p>
 </li>
 <li>
 <p><span class="math-tex" data-type="tex">\(𝒫\implies 𝒬\)</span> is logically equivalent to <span class="math-tex" data-type="tex">\(\lnot 𝒫\vee 𝒬\)</span>.</p>
@@ -974,7 +980,7 @@ Paged.registerHandlers(handlers);
 <p>The proposition <span class="math-tex" data-type="tex">\(\exists n\in ℕ:n+4 < 7\)</span> is true since <span class="math-tex" data-type="tex">\(\lbrace n\mid n\in ℕ,n+4 < 7\rbrace =\lbrace 0,1,2\rbrace \not= \emptyset\)</span>.</p>
 </li>
 <li>
-<p>The proposition <span class="math-tex" data-type="tex">\(\forall n\in ℕ:n+6 < 4\)</span> is false since <span class="math-tex" data-type="tex">\(\lbrace n\mid n\in ℕ,n+6 < 4\rbrace =\emptyset\)</span>.</p>
+<p>The proposition <span class="math-tex" data-type="tex">\(\exists n\in ℕ:n+6 < 4\)</span> is false since <span class="math-tex" data-type="tex">\(\lbrace n\mid n\in ℕ,n+6 < 4\rbrace =\emptyset\)</span>.</p>
 </li>
 <li>
 <p>The symbol <span class="math-tex" data-type="tex">\(\exists\)</span> can be used to define the intersection of an indexed collection <span class="math-tex" data-type="tex">\(\lbrace A_i :i\in I\rbrace\)</span> of sets <span class="math-tex" data-type="tex">\(A_i\)</span> as follows: <span class="math-tex" data-type="tex">\(\bigcup_{i\in I} A_i =\lbrace x\mid\exists i\in I,x\in A_i \rbrace\)</span>.</p>
