some more changes

--- a/test/book.html
+++ b/test/book.html
@@ -148,10 +148,10 @@ Paged.registerHandlers(handlers);
 <h1>Course</h1>
 <ul>
 <li>
-<p>Theory: 22 Hr → 66 Hr</p>
+<p>Theory: 24 Hr → 72 Hr</p>
 </li>
 <li>
-<p>Exercises: 22 Hr 	→ 44 Hr</p>
+<p>Exercises: 20 Hr 	→ 40 Hr</p>
 </li>
 </ul>
 </section>
@@ -661,7 +661,7 @@ Paged.registerHandlers(handlers);
 <td style="text-align:center"><span class="math-tex" data-type="tex">\(𝒫\)</span></td>
 <td style="text-align:center"><span class="math-tex" data-type="tex">\(𝒬\)</span></td>
 <td style="text-align:center"></td>
-<td style="text-align:center"><span class="math-tex" data-type="tex">\(𝒫\implies 𝒬\)</span></td>
+<td style="text-align:center"><span class="math-tex" data-type="tex">\(\left.𝒫\implies 𝒬\right.\)</span></td>
 <td style="text-align:center"></td>
 <td style="text-align:center"><span class="math-tex" data-type="tex">\(\lnot 𝒫\)</span></td>
 <td style="text-align:center"><span class="math-tex" data-type="tex">\(\lnot 𝒫\vee 𝒬\)</span></td>
