--- a/test/book.html
+++ b/test/book.html
@@ -8044,7 +8044,7 @@ a^{\frac{m}{n}}&=\sqrt[n]{a^m}\quad\textrm{if }n=1,2,3,\dots\textrm{ and }m=\pm1
 <p>Since <span class="math-tex" data-type="tex">\(\ln 1=0\)</span>, we have <span class="math-tex" data-type="tex">\(\exp 0=1\)</span>. The domain of <span class="math-tex" data-type="tex">\(\exp\)</span> is <span class="math-tex" data-type="tex">\(\left]-\infty,\infty\right[\)</span>, the range of <span class="math-tex" data-type="tex">\(\ln\)</span>. The range of <span class="math-tex" data-type="tex">\(\exp\)</span> is <span class="math-tex" data-type="tex">\(\left]0,\infty\right[\)</span>, the domain of <span class="math-tex" data-type="tex">\(\ln\)</span>. We have cancellation identities</p>
 <div class="math-tex" data-type="equation">
 \[
-\forall x\in\mathbb R:\ln\left(\exp x\right)=x\quad\textrm{and}\quad\forall x&gt;0:\exp\left(\ln x\right)=x\,.
+\forall x\in ℝ:\ln\left(\exp x\right)=x\quad\textrm{and}\quad\forall x&gt;0:\exp\left(\ln x\right)=x\,.
 \]
 </div>
 <p>We can deduce various properties of <span class="math-tex" data-type="tex">\(\exp\)</span> from corresponding properties of <span class="math-tex" data-type="tex">\(\ln\)</span>. Not surprisingly, they are properties we would expect an exponential function to have.</p>
@@ -8217,7 +8217,7 @@ y=ℯ^x&\implies x=\ln y\\
 <p>Let</p>
 <div class="math-tex" data-type="equation">
 \[
-\forall x\in\mathbb R,\forall a&gt;0:a^x=ℯ^{x\ln a}\,.
+\forall x\in ℝ,\forall a&gt;0:a^x=ℯ^{x\ln a}\,.
 \]
 </div>
 </div>
@@ -10586,7 +10586,7 @@ x=f\left(t\right)\quad\textrm{and}\quad y = g\left(t\right)\quad\textrm{for }t\i
 <p>Sketch and identify the parametric curve</p>
 <div class="math-tex" data-type="equation">
 \[
-x=t^2-1\quad\textrm{and}\quad y=t+1\,,\quad t\in\mathbb R\,.
+x=t^2-1\quad\textrm{and}\quad y=t+1\,,\quad t\in ℝ\,.
 \]
 </div>
 <p>We could construct a table of values of <span class="math-tex" data-type="tex">\(x\)</span> and <span class="math-tex" data-type="tex">\(y\)</span> for various values of <span class="math-tex" data-type="tex">\(t\)</span>, thus getting the coordinates of a number of points on a curve. However, for this example it is easier to <i>eliminate</i> the parameter from the pair of parametric equations, thus producing a single equation in <span class="math-tex" data-type="tex">\(x\)</span> and <span class="math-tex" data-type="tex">\(y\)</span> whose graph is the desired curve:</p>
@@ -10641,7 +10641,7 @@ t=y - 1\,,\quad x=t^2-1=\left(y-1\right)^2-1=y^2-2y\,.
 \(t=-2\)
 </foreignObject>
 </svg>
-<figcaption>The parabola defined parameterically by <span class="math-tex" data-type="tex">\(x=t^2-1, y=t+1, t\in\mathbb R\,.\)</span></figcaption></figure>
+<figcaption>The parabola defined parameterically by <span class="math-tex" data-type="tex">\(x=t^2-1, y=t+1, t\in ℝ\,.\)</span></figcaption></figure>
 </div>
 <p>Although the curve in this example is more easily identified when the parameter is eliminated, there is a loss of information in going to the nonparametric form. Specifically, we lose the sense of the curve as the path of a moving point and hence also the direction of the curve.</p>
 <div data-type="example">
