a lot of updates

--- a/test/book.html
+++ b/test/book.html
@@ -338,7 +338,7 @@ Paged.registerHandlers(handlers);
 <p>axioms of Peano: axiomes de Peano (m), de axioma’s van Peano</p>
 <p>bijection: bijection (f), de bijectie</p>
 <p>cardinal number: nobre cardinal (m), het cardinaalgetal</p>
-<p>cartesian product: produit catésien (m), het cartesisch product</p>
+<p>cartesian product: produit cartésien (m), het cartesisch product</p>
 <p>complement: complément (m), het complement</p>
 <p>composite proposition: proposition composée (f), de samengestelde bewering</p>
 <p>conditional proposition: proposition conditionelle (f), de voorwaardelijke bewering</p>
@@ -464,7 +464,7 @@ Paged.registerHandlers(handlers);
 <p>radian: radian (m), de radiaal</p>
 <p>rational function: fonction rationnelle (f), de rationale functie</p>
 <p>rational number: nombre rationnel (m), het rationaal getal</p>
-<p>real line: droite (f) réelle, de reële as</p>
+<p>real line: droite réelle (f), de reële as</p>
 <p>real number: nombre réel (m), het reëel getal</p>
 <p>relation: relation (f), de relatie</p>
 <p>upper bound: majorant (m), de bovengrens</p>
@@ -1454,11 +1454,11 @@ Paged.registerHandlers(handlers);
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-1^2+2^2+3^2+\cdots+k^2+\left(k+1\right)^2&=\frac{1}{6}k\left(k+1\right)\left(2k+1\right)+\left(k+1\right)^2\\
-&=\frac{1}{6}\left(2k^3+\left(3+6\right)k^2+\left(1+12\right)k+6\right)\\
-&=\frac{1}{6}\left(2k^3+9k^2+13k+6\right)\\
-&=\frac{1}{6}\left(k+1\right)\left(k+2\right)\left(2k+3\right)\\
-&=\frac{1}{6}\left(k+1\right)\left(\left(k+1\right)+1\right)\left(2\left(k+1\right)+1\right)
+1^2+2^2+3^2+\cdots+k^2+\left(k+1\right)^2&=&\frac{1}{6}k\left(k+1\right)\left(2k+1\right)+\left(k+1\right)^2\\
+&=&\frac{1}{6}\left(2k^3+\left(3+6\right)k^2+\left(1+12\right)k+6\right)\\
+&=&\frac{1}{6}\left(2k^3+9k^2+13k+6\right)\\
+&=&\frac{1}{6}\left(k+1\right)\left(k+2\right)\left(2k+3\right)\\
+&=&\frac{1}{6}\left(k+1\right)\left(\left(k+1\right)+1\right)\left(2\left(k+1\right)+1\right)
 \end{aligned}
 \]
 </div>
@@ -1782,7 +1782,7 @@ a_1\cdot a_2\cdot\dots\cdot a_n&\textrm{if }n\in ℕ_0
 </div>
 <div data-type="exercise">
 <h1></h1>
-<p>Proof <span class="math-tex" data-type="tex">\(\sqrt 3 \notin ℚ\)</span>. What goes wrong if you try to proof <span class="math-tex" data-type="tex">\(\sqrt 4 \notin ℚ\)</span>?</p>
+<p>Prove <span class="math-tex" data-type="tex">\(\sqrt 3 \notin ℚ\)</span>. What goes wrong if you try to prove <span class="math-tex" data-type="tex">\(\sqrt 4 \notin ℚ\)</span>?</p>
 <p>Hint: If a prime number divides the square of an integer, it also divides the integer itself.</p>
 </div>
 <section data-type="sect1">
@@ -1889,8 +1889,8 @@ a_1\cdot a_2\cdot\dots\cdot a_n&\textrm{if }n\in ℕ_0
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-\left|a\pm b\right|^2&=\left(a\pm b\right)^2=a^2\pm 2ab+b^2\\
-&\le\left|a\right|^2+2\left|a\right|\left|b\right|+\left|b\right|^2=\left(\left|a\right|+\left|b\right|\right)^2
+\left|a\pm b\right|^2&=&\left(a\pm b\right)^2=a^2\pm 2ab+b^2\\
+&\le&\left|a\right|^2+2\left|a\right|\left|b\right|+\left|b\right|^2=\left(\left|a\right|+\left|b\right|\right)^2
 \end{aligned}
 \]
 </div>
@@ -2362,10 +2362,10 @@ y=\sqrt{1-x^2}\ \ \ \ \ \textrm{and}\ \ \ \ \ y=-\sqrt{1-x^2}\,,
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-\left(f+g\right)(x)&=f(x)+g(x)\\
-\left(f-g\right)(x)&=f(x)-g(x)\\
-\left(fg\right)(x)&=f(x)g(x)\\
-\left(\frac{f}{g}\right)(x)&=\frac{f(x)}{g(x)}\,,\textrm{ where } g(x)\ne0\,.
+\left(f+g\right)(x)&=&f(x)+g(x)\\
+\left(f-g\right)(x)&=&f(x)-g(x)\\
+\left(fg\right)(x)&=&f(x)g(x)\\
+\left(\frac{f}{g}\right)(x)&=&\frac{f(x)}{g(x)}\,,\textrm{ where } g(x)\ne0\,.
 \end{aligned}
 \]
 </div>
@@ -3096,10 +3096,10 @@ A=\frac{t}{2\uppi }(\uppi  r^2)=\frac{r^2t}{2}\,.
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-\cos\left(s+t\right)&=\cos s\cos t-\sin s\sin t\\
-\sin\left(s+t\right)&=\sin s\cos t+\cos s\sin t\\
-\cos\left(s-t\right)&=\cos s\cos t+\sin s\sin t\\
-\sin\left(s-t\right)&=\sin s\cos t-\cos s\sin t\\
+\cos\left(s+t\right)&=&\cos s\,\cos t-\sin s\,\sin t\\
+\sin\left(s+t\right)&=&\sin s\,\cos t+\cos s\,\sin t\\
+\cos\left(s-t\right)&=&\cos s\,\cos t+\sin s\,\sin t\\
+\sin\left(s-t\right)&=&\sin s\,\cos t-\cos s\,\sin t\\
 \end{aligned}
 \]
 </div>
@@ -3110,8 +3110,8 @@ A=\frac{t}{2\uppi }(\uppi  r^2)=\frac{r^2t}{2}\,.
 <div class="math-tex" data-type="equation">
 \[
 \begin{alignedat}{3}
-P_t&=\left(\cos t,\sin t\right)\ \ \ \ \ &P_{s-t}&=\left(\cos\left(s-t\right),\sin\left(s-t\right)\right)\\
-P_s&=\left(\cos s,\sin s\right)\ \ \ \ \ &A&=\left(1,0\right)\,.
+P_t&=&\left(\cos t,\sin t\right)\ \ \ \ \ &P_{s-t}&=&\left(\cos\left(s-t\right),\sin\left(s-t\right)\right)\\
+P_s&=&\left(\cos s,\sin s\right)\ \ \ \ \ &A&=&\left(1,0\right)\,.
 \end{alignedat}
 \]
 </div>
@@ -3125,8 +3125,8 @@ P_s&=\left(\cos s,\sin s\right)\ \ \ \ \ &A&=\left(1,0\right)\,.
 <div class="math-tex" data-type="equation">
 \[
 \begin{gathered}
-\cos^2s- 2\cos s\cos t+\cos^2t+\sin^2s-2\sin s\sin t+\sin^2 t\\
-=\cos^2\left(s-t\right)-2\cos\left(s-t\right)+1+\sin^2\left(s-t\right)\,.
+\cos^2s- 2\cos s\,\cos t+\cos^2t+\sin^2s-2\sin s\,\sin t+\sin^2 t\\
+\quad\quad\quad\quad=\cos^2\left(s-t\right)-2\cos\left(s-t\right)+1+\sin^2\left(s-t\right)\,.
 \end{gathered}
 \]
 </div>
@@ -3134,7 +3134,7 @@ P_s&=\left(\cos s,\sin s\right)\ \ \ \ \ &A&=\left(1,0\right)\,.
 </div>
 <div data-type="exercise">
 <h1></h1>
-<p>Proof the other formulas using the even/odd behavior of the cosine and sine functions and the complementary angles relations.</p>
+<p>Prove the other formulas using the even/odd behavior of the cosine and sine functions and the complementary angles relations.</p>
 </div>
 <p>From the addition formulas, we obtain as special cases certain useful formulas called <i>double-angle formulas</i>.</p>
 <div data-type="corollary">
@@ -3142,7 +3142,7 @@ P_s&=\left(\cos s,\sin s\right)\ \ \ \ \ &A&=\left(1,0\right)\,.
 <p>Let <span class="math-tex" data-type="tex">\(t\inℝ\)</span>.</p>
 <ol>
 <li>
-<p><span class="math-tex" data-type="tex">\(\sin 2t=2\sin t\cos t\)</span> and</p>
+<p><span class="math-tex" data-type="tex">\(\sin 2t=2\sin t\,\cos t\)</span> and</p>
 </li>
 <li>
 <p><span class="math-tex" data-type="tex">\(\cos 2t=\cos^2t-\sin^2t=2\cos^2t-1=1-2\sin^2t\)</span>.</p>
@@ -8214,7 +8214,7 @@ a^{\frac{m}{n}}&=\sqrt[n]{a^m}\quad\textrm{if }n=1,2,3,\dots\textrm{ and }m=\pm1
 </div>
 <div data-type="proof">
 <h1></h1>
-<p>We proof only the first property, the rest are done similarly.</p>
+<p>We prove only the first property, the rest are done similarly.</p>
 <p>If <span class="math-tex" data-type="tex">\(u=\left(\exp x\right)^r\)</span>, then, <span class="math-tex" data-type="tex">\(\ln u=r\ln\left(\exp x\right)=rx\)</span>. Therefore, <span class="math-tex" data-type="tex">\(u=\exp\left(rx\right)\)</span>.</p>
 </div>
 <p>Now we make an important definition!</p>
