Some more updates

--- a/test/book.html
+++ b/test/book.html
@@ -1526,7 +1526,7 @@ Paged.registerHandlers(handlers);
 </div>
 <div data-type="example">
 <h1></h1>
-<p>Proof the second property.</p>
+<p>Prove the second property.</p>
 </div>
 <div data-type="proof">
 <h1></h1>
@@ -1541,7 +1541,7 @@ Paged.registerHandlers(handlers);
 </div>
 <div data-type="exercise">
 <h1></h1>
-<p>Proof the other properties.</p>
+<p>Prove the other properties.</p>
 </div>
 <p>The associative property allows to write in an unambiguous way <span class="math-tex" data-type="tex">\(a+b+c\)</span> and <span class="math-tex" data-type="tex">\(abc\)</span>. More generally, the sum of <span class="math-tex" data-type="tex">\(a_1,a_2,\dots,a_n\in ℚ\)</span> is unambiguously defined. To present this sum concisely, we use the <i>sigma notation</i>:</p>
 <div class="math-tex" data-type="equation">
@@ -1642,7 +1642,7 @@ a_1\cdot a_2\cdot\dots\cdot a_n&\textrm{if }n\in ℕ_0
 </div>
 <div data-type="example">
 <h1></h1>
-<p>Proof the fifth property.</p>
+<p>Prove the fifth property.</p>
 </div>
 <div data-type="proof">
 <h1>&nbsp;(by contradiction)</h1>
@@ -1654,7 +1654,7 @@ a_1\cdot a_2\cdot\dots\cdot a_n&\textrm{if }n\in ℕ_0
 </div>
 <div data-type="exercise">
 <h1></h1>
-<p>Proof the other properties.</p>
+<p>Prove the other properties.</p>
 </div>
 <section data-type="sect2">
 <h2>Decimal Expansions</h2>
@@ -2028,7 +2028,7 @@ a_n\le a_{n+1}\textrm{ and }b_{n+1}\le b_n\textrm{, so that } \cdots\subset I_n\
 </ol>
 <p>The same methodology can be used to prove some important theorems in calculus. We call such a procedure, the <i>bisection method</i>.</p>
 <div data-type="template">
-<h1>&nbsp;(Proof by bisection)</h1>
+<h1>&nbsp;(Prove by bisection)</h1>
 <p>Begin with a closed interval <span class="math-tex" data-type="tex">\(I_0=\left[a_0,b_0\right]\)</span>.</p>
 <p>STEP 1: Bisect <span class="math-tex" data-type="tex">\(I_0\)</span> to obtain two closed intervals <span class="math-tex" data-type="tex">\(\left[a_0, \frac{a_0+b_0}{2}\right]\)</span> and <span class="math-tex" data-type="tex">\(\left[\frac{a_0+b_0}{2}, b_0\right]\)</span>.</p>
 <p>STEP 2: Select one of the two subintervals above, and call it <span class="math-tex" data-type="tex">\(I_1=\left[a_1,b_1\right]\)</span>.</p>
@@ -3130,7 +3130,7 @@ P_s&=&\left(\cos s,\sin s\right)\ \ \ \ \ &A&=&\left(1,0\right)\,.
 \end{gathered}
 \]
 </div>
-<p>Since <span class="math-tex" data-type="tex">\(\cos^2x+\sin^2x=1\)</span>, this reduces to <span class="math-tex" data-type="tex">\(\cos\left(s-t\right)=\cos s\cos t+\sin s\sin t\)</span>.</p>
+<p>Since <span class="math-tex" data-type="tex">\(\cos^2x+\sin^2x=1\)</span>, this reduces to <span class="math-tex" data-type="tex">\(\cos\left(s-t\right)=\cos s\,\cos t+\sin s\,\sin t\)</span>.</p>
 </div>
 <div data-type="exercise">
 <h1></h1>
