removal of pagebreak

--- a/test/book.html
+++ b/test/book.html
@@ -5949,7 +5949,7 @@ y=f\left(x\right)\,,
 \]
 </div>
 </div>
-<section data-type="sect2" class="pagebreak" >
+<section data-type="sect2">
 <h2>Chain Rule</h2>
 <p>Although we can differentiate <span class="math-tex" data-type="tex">\(\sqrt x\)</span> and <span class="math-tex" data-type="tex">\(x^2+1\)</span>, we cannot yet differentiate <span class="math-tex" data-type="tex">\(\sqrt{x^2+1}\)</span>. To do this, we need a rule that tells us how to differentiate composites of functions whose derivatives we already know. This rule is known as the Chain Rule and is the most often used of all the differentiation rules.</p>
 <div data-type="theorem">
@@ -6063,7 +6063,7 @@ f\prime\left(u\right)=\frac{1}{2\sqrt u}\quad\textrm{and}\quad g\prime\left(x\ri
 \]
 </div>
 </div>
-<section data-type="sect1" class="pagebreak" >
+<section data-type="sect1">
 <h1>Derivatives of Trigonometric Functions</h1>
 <p>In this section we will calculate the derivatives of the six trigonometric functions. We only have to work hard for one of them, sine; the others then follow from known identities and the differentiation rules</p>
 <p>First, we have to establish some trigonometric limits that we will need to calculate the derivative of sine. It is assumed throughout that the arguments of the trigonometric functions are measured in radians.</p>
